--- a/038-day/MVC-demo/package.json
+++ b/038-day/MVC-demo/package.json
@@ -27,6 +27,7 @@
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
+    "handlebars": "^4.0.11",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4"
   }
